--- a/platova-kalkulacka-acr.html
+++ b/platova-kalkulacka-acr.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="cs">
 <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3909467NT0"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3909467NT0');
+  </script>
+
   <meta charset="UTF-8">
   <title>Platová kalkulačka AČR</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +18,48 @@
   <meta name="author" content="Karel Minarcik">
   <meta name="robots" content="index, follow">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Renta AČR",
+      "url": "https://www.rentaacr.cz",
+      "description": "Nástroj pro výpočet výsluhového příspěvku, odchodného a odbytného vojáků Armády České republiky a informace o personální analýze AČR.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Renta AČR",
+        "url": "https://www.rentaacr.cz",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://www.rentaacr.cz/icons/favicon-32x32.png"
+        }
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://www.rentaacr.cz/hledani?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      },
+      "mainEntity": {
+        "@type": "WebPage",
+        "name": "Renta AČR Kalkulačka",
+        "url": "https://www.rentaacr.cz",
+        "description": "Snadný výpočet výsluh, odchodného a odbytného vojáků Armády České republiky podle délky služby a hodnosti.",
+        "about": {
+          "@type": "Service",
+          "name": "Kalkulačka výsluhového příspěvku",
+          "serviceType": "Výpočet výsluhového příspěvku a odchodného",
+          "provider": {
+            "@type": "Organization",
+            "name": "Renta AČR"
+          }
+        }
+      }
+    }
+
+  </script>
   <style>
     body {
       background-color: #111;
@@ -78,7 +129,7 @@
 
   <main>
     <div class="kalkulacka-container mt-5">
-    <h1 class="text-center mb-4">Kalkulačka mzdy - AČR</h1>
+    <h1 class="text-center mb-4">Platová kalkulačka AČR</h1>
 
     <label for="rank">Hodnost:</label>
     <select id="rank" class="form-select">
