adding header footer

--- a/platova-kalkulacka-acr.html
+++ b/platova-kalkulacka-acr.html
@@ -281,6 +281,10 @@
   
       document.getElementById('vysledek').innerHTML = vysledekText;
     }
+    document.getElementById("currentYear").textContent = new Date().getFullYear();
+    document.getElementById("currentDate").textContent = new Date().toLocaleDateString("cs-CZ", {
+        day: "2-digit", month: "2-digit", year: "numeric"
+    });
   </script>
   
 </body>
