--- a/platova-kalkulacka-acr.html
+++ b/platova-kalkulacka-acr.html
@@ -21,6 +21,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+  <script src="https://kit.fontawesome.com/c3fa60ce80.js" crossorigin="anonymous"></script>
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -125,7 +126,7 @@
   </style>
 </head>
 <body>
-  <header class="py-3 shadow-sm sticky-top text-white">
+  <header class="py-3 shadow-sm text-white">
     <div class="container d-flex justify-content-between align-items-center">
         <a class="navbar-brand text-white d-flex align-items-center gap-2" href="index.html">
             <img src="icons/apple-touch-icon.png" alt="Logo Renta AČR" width="40" height="40">
